@@ -52,6 +52,8 @@ import org.apache.kafka.connect.tools.MockSourceConnector;
 import org.apache.kafka.connect.tools.SchemaSourceConnector;
 import org.apache.kafka.connect.tools.VerifiableSinkConnector;
 import org.apache.kafka.connect.tools.VerifiableSourceConnector;
+import org.apache.kafka.connect.util.Callback;
+import org.easymock.Capture;
 import org.easymock.EasyMock;
 import org.easymock.IAnswer;
 import org.junit.Before;
@@ -77,6 +79,7 @@ import java.util.TreeSet;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
 @RunWith(PowerMockRunner.class)
@@ -198,9 +201,10 @@ public class ConnectorPluginsResourceTest {
 
     @Test
     public void testValidateConfigWithSingleErrorDueToMissingConnectorClassname() throws Throwable {
-        herder.validateConnectorConfig(EasyMock.eq(partialProps));
+        Capture<Callback<ConfigInfos>> configInfosCallback = EasyMock.newCapture();
+        herder.validateConnectorConfig(EasyMock.eq(partialProps), EasyMock.capture(configInfosCallback), EasyMock.anyBoolean());
 
-        PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
+        PowerMock.expectLastCall().andAnswer((IAnswer<Void>) () -> {
             ConfigDef connectorConfigDef = ConnectorConfig.configDef();
             List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(partialProps);
 
@@ -214,12 +218,14 @@ public class ConnectorPluginsResourceTest {
             resultConfigKeys.putAll(connectorConfigDef.configKeys());
             configValues.addAll(connectorConfigValues);
 
-            return AbstractHerder.generateResult(
-                    ConnectorPluginsResourceTestConnector.class.getName(),
-                    resultConfigKeys,
-                    configValues,
-                    Collections.singletonList("Test")
+            ConfigInfos configInfos = AbstractHerder.generateResult(
+                ConnectorPluginsResourceTestConnector.class.getName(),
+                resultConfigKeys,
+                configValues,
+                Collections.singletonList("Test")
             );
+            configInfosCallback.getValue().onCompletion(null, configInfos);
+            return null;
         });
 
         PowerMock.replayAll();
@@ -243,7 +249,8 @@ public class ConnectorPluginsResourceTest {
 
     @Test
     public void testValidateConfigWithSimpleName() throws Throwable {
-        herder.validateConnectorConfig(EasyMock.eq(props));
+        Capture<Callback<ConfigInfos>> configInfosCallback = EasyMock.newCapture();
+        herder.validateConnectorConfig(EasyMock.eq(props), EasyMock.capture(configInfosCallback), EasyMock.anyBoolean());
 
         PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
             ConfigDef connectorConfigDef = ConnectorConfig.configDef();
@@ -259,12 +266,14 @@ public class ConnectorPluginsResourceTest {
             resultConfigKeys.putAll(connectorConfigDef.configKeys());
             configValues.addAll(connectorConfigValues);
 
-            return AbstractHerder.generateResult(
+            ConfigInfos configInfos = AbstractHerder.generateResult(
                     ConnectorPluginsResourceTestConnector.class.getName(),
                     resultConfigKeys,
                     configValues,
                     Collections.singletonList("Test")
             );
+            configInfosCallback.getValue().onCompletion(null, configInfos);
+            return null;
         });
 
         PowerMock.replayAll();
@@ -284,7 +293,8 @@ public class ConnectorPluginsResourceTest {
 
     @Test
     public void testValidateConfigWithAlias() throws Throwable {
-        herder.validateConnectorConfig(EasyMock.eq(props));
+        Capture<Callback<ConfigInfos>> configInfosCallback = EasyMock.newCapture();
+        herder.validateConnectorConfig(EasyMock.eq(props), EasyMock.capture(configInfosCallback), EasyMock.anyBoolean());
 
         PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
             ConfigDef connectorConfigDef = ConnectorConfig.configDef();
@@ -300,12 +310,14 @@ public class ConnectorPluginsResourceTest {
             resultConfigKeys.putAll(connectorConfigDef.configKeys());
             configValues.addAll(connectorConfigValues);
 
-            return AbstractHerder.generateResult(
+            ConfigInfos configInfos = AbstractHerder.generateResult(
                     ConnectorPluginsResourceTestConnector.class.getName(),
                     resultConfigKeys,
                     configValues,
                     Collections.singletonList("Test")
             );
+            configInfosCallback.getValue().onCompletion(null, configInfos);
+            return null;
         });
 
         PowerMock.replayAll();
@@ -323,74 +335,18 @@ public class ConnectorPluginsResourceTest {
         PowerMock.verifyAll();
     }
 
-    @Test(expected = BadRequestException.class)
-    public void testValidateConfigWithNonExistentName() throws Throwable {
-        herder.validateConnectorConfig(EasyMock.eq(props));
-
-        PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
-            ConfigDef connectorConfigDef = ConnectorConfig.configDef();
-            List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(props);
-
-            Connector connector = new ConnectorPluginsResourceTestConnector();
-            Config config = connector.validate(props);
-            ConfigDef configDef = connector.config();
-            Map<String, ConfigDef.ConfigKey> configKeys = configDef.configKeys();
-            List<ConfigValue> configValues = config.configValues();
-
-            Map<String, ConfigDef.ConfigKey> resultConfigKeys = new HashMap<>(configKeys);
-            resultConfigKeys.putAll(connectorConfigDef.configKeys());
-            configValues.addAll(connectorConfigValues);
-
-            return AbstractHerder.generateResult(
-                    ConnectorPluginsResourceTestConnector.class.getName(),
-                    resultConfigKeys,
-                    configValues,
-                    Collections.singletonList("Test")
-            );
-        });
-
-        PowerMock.replayAll();
-
+    @Test
+    public void testValidateConfigWithNonExistentName() {
         // make a request to connector-plugins resource using a non-loaded connector with the same
         // simple name but different package.
         String customClassname = "com.custom.package."
             + ConnectorPluginsResourceTestConnector.class.getSimpleName();
-        connectorPluginsResource.validateConfigs(customClassname, props);
-
-        PowerMock.verifyAll();
+        assertThrows(BadRequestException.class, () -> connectorPluginsResource.validateConfigs(customClassname, props));
     }
 
-    @Test(expected = BadRequestException.class)
-    public void testValidateConfigWithNonExistentAlias() throws Throwable {
-        herder.validateConnectorConfig(EasyMock.eq(props));
-
-        PowerMock.expectLastCall().andAnswer((IAnswer<ConfigInfos>) () -> {
-            ConfigDef connectorConfigDef = ConnectorConfig.configDef();
-            List<ConfigValue> connectorConfigValues = connectorConfigDef.validate(props);
-
-            Connector connector = new ConnectorPluginsResourceTestConnector();
-            Config config = connector.validate(props);
-            ConfigDef configDef = connector.config();
-            Map<String, ConfigDef.ConfigKey> configKeys = configDef.configKeys();
-            List<ConfigValue> configValues = config.configValues();
-
-            Map<String, ConfigDef.ConfigKey> resultConfigKeys = new HashMap<>(configKeys);
-            resultConfigKeys.putAll(connectorConfigDef.configKeys());
-            configValues.addAll(connectorConfigValues);
-
-            return AbstractHerder.generateResult(
-                    ConnectorPluginsResourceTestConnector.class.getName(),
-                    resultConfigKeys,
-                    configValues,
-                    Collections.singletonList("Test")
-            );
-        });
-
-        PowerMock.replayAll();
-
-        connectorPluginsResource.validateConfigs("ConnectorPluginsTest", props);
-
-        PowerMock.verifyAll();
+    @Test
+    public void testValidateConfigWithNonExistentAlias() {
+        assertThrows(BadRequestException.class, () -> connectorPluginsResource.validateConfigs("ConnectorPluginsTest", props));
     }
 
     @Test
@@ -479,7 +435,7 @@ public class ConnectorPluginsResourceTest {
         public MockConnectorPluginDesc(Class<? extends Connector> klass) throws Exception {
             super(
                     klass,
-                    klass.newInstance().version(),
+                    klass.getConstructor().newInstance().version(),
                     new MockPluginClassLoader(null, new URL[0])
             );
         }
